--- a/scripts/plots_new_2c_6p.qmd
+++ b/scripts/plots_new_2c_6p.qmd
@@ -67,16 +67,16 @@ agg_errors %>% filter(d != 0) %>% ggplot() +
 agg_part_filt <- agg_part %>% filter(study == 6 & n_sample != 5000)
 agg_part_filt$n_sample <- agg_part_filt$n_sample*3
 
-agg_comp_filt <- agg_comp %>% filter(n_sample %in% c(75, 150, 300, 1500))
+agg_comp_filt <- agg_comp %>% filter(study == 3 & n_sample %in% c(75, 150, 300, 1500))
 
 
 aggRes <- left_join(agg_part_filt, agg_comp_filt, by = c("d", "c", "n_sample"))
 
 aggRes %>% ggplot() +
-  geom_line(aes(x = as.factor(n_sample), y = PMP1u.y, linetype = "Complete", color = as.factor(d), group = 1)) +
-  geom_line(aes(x = as.factor(n_sample), y = BES_PMP1u, linetype = "Partial", color = as.factor(d), group = 1)) +
+  geom_line(aes(x = as.factor(n_sample), y = BES_PMP1u.y, linetype = "Complete", color = as.factor(d), group = 1)) +
+  geom_line(aes(x = as.factor(n_sample), y = BES_PMP1u.x, linetype = "Partial", color = as.factor(d), group = 1)) +
   scale_linetype_manual(name = "Hypothesis", values = c("Complete" = "solid", "Partial" = "longdash")) +
-  geom_hline(yintercept = 8/(8+1), color = "black", linetype = "dotted", alpha = 0.5) +
+  #geom_hline(yintercept = 8/(8+1), color = "black", linetype = "dotted", alpha = 0.5) +
   labs(x = "Effect Size", y = "Correlation") +
   scale_color_discrete(guide = "none") +
   theme_bw() +
@@ -88,9 +88,9 @@ aggRes %>% ggplot() +
 ```{r}
 # Boxplots
 data_comp %>% 
-  filter(study == 6, n_sample %in% c(75, 150, 300, 1500), c == 0.2, d == 0.2) %>%
-  ggplot(aes(x = as.factor(n_sample), y = PMP1u)) +
-  stat_summary(aes(x = as.factor(n_sample), y = PMP1u), 
+  filter(study == 3, n_sample %in% c(75, 150, 300, 1500), c == 0.2, d == 0.2) %>%
+  ggplot(aes(x = as.factor(n_sample), y = BES_PMP1u)) +
+  stat_summary(aes(x = as.factor(n_sample), y = BES_PMP1u), 
                fun = mean, 
                geom = "line", 
                group = 1, 
@@ -110,7 +110,7 @@ data_part %>%
                group = 1, 
                linewidth = 0.2) +
   geom_boxplot(outlier.alpha = 0.3) +
-  geom_hline(yintercept = 8/(8+1), color = "black", linetype = "dashed", alpha = 0.8) +
+  #geom_hline(yintercept = 8/(8+1), color = "black", linetype = "dashed", alpha = 0.8) +
   ylim(0, 1) + 
   labs(x = "Sample Size (per Study)", y = "Posterior Model Probabilities") +
   theme_minimal()
@@ -119,8 +119,8 @@ data_part %>%
 ```{r}
 ## QQ Plot
 comp_filtered <- data_comp %>%
-  filter(study == 6 & n_sample %in% c(75, 150, 300, 1500), c == 0.2, d == 0.2) %>%
-  select(n_sample, PMP1u, nsim)
+  filter(study == 3 & n_sample %in% c(75, 150, 300, 1500), c == 0.2, d == 0.2) %>%
+  select(n_sample, BES_PMP1u, nsim)
 
 part_filtered <- data_part %>%
   filter(study == 6 & n_sample != 5000, c == 0.2, d == 0.2) %>% ungroup %>%
@@ -131,8 +131,8 @@ merged_data <- comp_filtered %>%
   inner_join(part_filtered, by = c("n_sample", "nsim"), suffix = c("_comp", "_part"))
 
 ggplot(merged_data, aes(sample = BES_PMP1u)) +
-  geom_qq(aes(sample = PMP1u)) +
-  geom_qq_line(aes(sample = PMP1u), color = "red") +
+  geom_qq(aes(sample = BES_PMP1u)) +
+  geom_qq_line(aes(sample = BES_PMP1u), color = "red") +
   facet_wrap(~ n_sample) + 
   labs(x = "Quantiles Complete Hypothesis", y = "Quantiles Partial Hypotheses",
        title = "Q-Q Plot: PMPs against unconstrained") +
