--- a/scripts/plots_new_changecomplexity.qmd
+++ b/scripts/plots_new_changecomplexity.qmd
@@ -77,7 +77,7 @@ aggRes %>% ggplot() +
   geom_line(aes(x = as.factor(n_sample), y = PMP1u.y, linetype = "Complete", color = as.factor(d), group = 1)) +
   geom_line(aes(x = as.factor(n_sample), y = BES_PMP1u, linetype = "Partial", color = as.factor(d), group = 1)) +
   scale_linetype_manual(name = "Hypothesis", values = c("Complete" = "solid", "Partial" = "longdash")) +
-  geom_hline(yintercept = 8/(8+1), color = "black", linetype = "dotted", alpha = 0.5) +
+  #geom_hline(yintercept = 8/(8+1), color = "black", linetype = "dotted", alpha = 0.5) +
   labs(x = "Effect Size", y = "Correlation") +
   scale_color_discrete(guide = "none") +
   theme_bw() +
@@ -111,7 +111,7 @@ data_part %>%
                group = 1, 
                linewidth = 0.2) +
   geom_boxplot(outlier.alpha = 0.3) +
-  geom_hline(yintercept = 8/(8+1), color = "black", linetype = "dashed", alpha = 0.8) +
+  #geom_hline(yintercept = 8/(8+1), color = "black", linetype = "dashed", alpha = 0.8) +
   ylim(0, 1) + 
   labs(x = "Sample Size (per Study)", y = "Posterior Model Probabilities") +
   theme_minimal()
