--- a/scripts/plots_new_2c_6p.qmd
+++ b/scripts/plots_new_2c_6p.qmd
@@ -16,10 +16,10 @@ library(tidyquant)
 ```{r}
 # Calculate Error Measures
 data_comp_filt <- data_comp %>% filter(n_sample %in% c(75, 150, 300, 1500)) %>%
-  select(c(nsim, n_sample, d, c, PMP1c))
+  dplyr::select(c(nsim, n_sample, d, c, PMP1c))
 data_part_filt <- data_part %>% filter(study == 6 & n_sample != 5000) %>%
   mutate(n_sample = n_sample*3) %>%
-  select(c(nsim, n_sample, d, c, BES_PMP1c))
+  dplyr::select(c(nsim, n_sample, d, c, BES_PMP1c))
 
 data_error <- left_join(data_comp_filt, data_part_filt) %>%
   group_by(n_sample, d, c) %>%
@@ -96,7 +96,7 @@ data_comp %>%
                group = 1, 
                linewidth = 0.2) +
   geom_boxplot(outlier.alpha = 0.3) +
-  geom_hline(yintercept = 24/(24+1), color = "black", linetype = "dashed", alpha = 0.8) +
+  #geom_hline(yintercept = 24/(24+1), color = "black", linetype = "dashed", alpha = 0.8) +
   ylim(0, 1) + 
   labs(x = "Sample Size", y = "Posterior Model Probabilities") +
   theme_minimal()
@@ -120,19 +120,19 @@ data_part %>%
 ## QQ Plot
 comp_filtered <- data_comp %>%
   filter(study == 3 & n_sample %in% c(75, 150, 300, 1500), c == 0.2, d == 0.2) %>%
-  select(n_sample, BES_PMP1u, nsim)
+  dplyr::select(n_sample, BES_PMP1u, nsim)
 
 part_filtered <- data_part %>%
   filter(study == 6 & n_sample != 5000, c == 0.2, d == 0.2) %>% ungroup %>%
-  select(n_sample, BES_PMP1u, nsim) 
+  dplyr::select(n_sample, BES_PMP1u, nsim) 
 part_filtered$n_sample <- part_filtered$n_sample*3
 
 merged_data <- comp_filtered %>%
   inner_join(part_filtered, by = c("n_sample", "nsim"), suffix = c("_comp", "_part"))
 
-ggplot(merged_data, aes(sample = BES_PMP1u)) +
-  geom_qq(aes(sample = BES_PMP1u)) +
-  geom_qq_line(aes(sample = BES_PMP1u), color = "red") +
+ggplot(merged_data, aes(sample = BES_PMP1u_part)) +
+  geom_qq(aes(sample = BES_PMP1u_comp)) +
+  geom_qq_line(aes(sample = BES_PMP1u_comp), color = "red") +
   facet_wrap(~ n_sample) + 
   labs(x = "Quantiles Complete Hypothesis", y = "Quantiles Partial Hypotheses",
        title = "Q-Q Plot: PMPs against unconstrained") +
@@ -142,8 +142,8 @@ ggplot(merged_data, aes(sample = BES_PMP1u)) +
 ```{r}
 ## Raincloud Plots
 data_comp %>% 
-  filter(study == 6, n_sample %in% c(75, 150, 300, 1500), c == 0.2, d == 0.2) %>%
-  ggplot(aes(y = factor(n_sample), x = PMP1u, fill = factor(n_sample))) +
+  filter(study == 3, n_sample %in% c(75, 150, 300, 1500), c == 0.2, d == 0.2) %>%
+  ggplot(aes(y = factor(n_sample), x = BES_PMP1u, fill = factor(n_sample))) +
   
   geom_boxplot(
     width = 0.12,
@@ -219,14 +219,14 @@ data_part %>%
 agg_part_filt <- agg_part %>% filter(study == 6 & n_sample != 5000)
 agg_part_filt$n_sample <- agg_part_filt$n_sample*3
 
-agg_comp_filt <- agg_comp %>% filter(n_sample %in% c(75, 150, 300, 1500))
+agg_comp_filt <- agg_comp %>% filter(study == 3 & n_sample %in% c(75, 150, 300, 1500))
 
 
 aggRes <- left_join(agg_part_filt, agg_comp_filt, by = c("d", "c", "n_sample"))
 
 aggRes %>% ggplot() +
-  geom_line(aes(x = as.factor(n_sample), y = PMP1c.y, linetype = "Complete", color = as.factor(d), group = 1)) +
-  geom_line(aes(x = as.factor(n_sample), y = BES_PMP1c, linetype = "Partial", color = as.factor(d), group = 1)) +
+  geom_line(aes(x = as.factor(n_sample), y = BES_PMP1c.y, linetype = "Complete", color = as.factor(d), group = 1)) +
+  geom_line(aes(x = as.factor(n_sample), y = BES_PMP1c.x, linetype = "Partial", color = as.factor(d), group = 1)) +
   scale_linetype_manual(name = "Hypothesis", values = c("Complete" = "solid", "Partial" = "longdash")) +
   labs(x = "Effect Size", y = "Correlation") +
   scale_color_discrete(guide = "none") +
@@ -239,7 +239,7 @@ aggRes %>% ggplot() +
 ```{r}
 # Boxplots
 data_comp %>% 
-  filter(study == 6, n_sample %in% c(75, 150, 300, 1500), c == 0.2, d == 0.2) %>%
+  filter(study == 3, n_sample %in% c(75, 150, 300, 1500), c == 0.2, d == 0.2) %>%
   ggplot(aes(x = as.factor(n_sample), y = PMP1c)) +
   stat_summary(aes(x = as.factor(n_sample), y = PMP1c), 
                fun = mean, 
@@ -268,20 +268,20 @@ data_part %>%
 ```{r}
 ## QQ plot
 comp_filtered <- data_comp %>%
-  filter(study == 6 & n_sample %in% c(75, 150, 300, 1500), c == 0.2, d == 0.2) %>%
-  select(n_sample, PMP1c, nsim)
+  filter(study == 3 & n_sample %in% c(75, 150, 300, 1500), c == 0.2, d == 0.2) %>%
+  dplyr::select(n_sample, BES_PMP1c, nsim)
 
 part_filtered <- data_part %>%
   filter(study == 6 & n_sample != 5000, c == 0.2, d == 0.2) %>% ungroup %>%
-  select(n_sample, BES_PMP1c, nsim) 
+  dplyr::select(n_sample, BES_PMP1c, nsim) 
 part_filtered$n_sample <- part_filtered$n_sample*3
 
 merged_data <- comp_filtered %>%
   inner_join(part_filtered, by = c("n_sample", "nsim"), suffix = c("_comp", "_part"))
 
-ggplot(merged_data, aes(sample = BES_PMP1c)) +
-  geom_qq(aes(sample = PMP1c)) +
-  geom_qq_line(aes(sample = PMP1c), color = "red") +
+ggplot(merged_data, aes(sample = BES_PMP1c_part)) +
+  geom_qq(aes(sample = BES_PMP1c_comp)) +
+  geom_qq_line(aes(sample = BES_PMP1c_comp), color = "red") +
   facet_wrap(~ n_sample) + 
   labs(x = "Quantiles Complete Hypothesis", y = "Quantiles Partial Hypotheses",
        title = "Q-Q Plot: PMPs against complement") +
@@ -291,8 +291,8 @@ ggplot(merged_data, aes(sample = BES_PMP1c)) +
 ```{r}
 ## Raincloud Plots
 data_comp %>% 
-  filter(study == 6, n_sample %in% c(75, 150, 300, 1500), c == 0.2, d == 0.2) %>%
-  ggplot(aes(y = factor(n_sample), x = PMP1c, fill = factor(n_sample))) +
+  filter(study == 3, n_sample %in% c(75, 150, 300, 1500), c == 0.2, d == 0.2) %>%
+  ggplot(aes(y = factor(n_sample), x = BES_PMP1c, fill = factor(n_sample))) +
   
   geom_boxplot(
     width = 0.12,
